refactor md2Redbook skill with themes and paging

--- a/assets/cover.html
+++ b/assets/cover.html
@@ -23,7 +23,7 @@
         .cover-container {
             width: 1080px;
             height: 1440px;
-            background: linear-gradient(180deg, #3450E4 0%, #D266DA 100%);
+            background: linear-gradient(180deg, #f3f3f3 0%, #f9f9f9 100%);
             position: relative;
             overflow: hidden;
         }
@@ -51,7 +51,7 @@
             font-weight: 900;
             font-size: 130px;
             line-height: 1.4;
-            background: linear-gradient(180deg, #2E67B1 0%, #4C4C4C 100%);
+            background: linear-gradient(180deg, #111827 0%, #4B5563 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
